--- a/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.css
+++ b/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.css
@@ -170,6 +170,29 @@ html {
     font-style: italic;
 }
 
+.tree-node__placeholder-button {
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
+    text-align: left;
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+.tree-node__placeholder-button:hover {
+    text-decoration: underline;
+}
+
+.tree-node__placeholder-button:focus-visible {
+    outline: 2px solid var(--accent);
+    outline-offset: 2px;
+    border-radius: 4px;
+}
+
 .tree-node__disclosure {
     flex-shrink: 0;
     width: 16px;
