Refactor DOMTreeView scripts into DOMTree-prefixed modules

--- a/Sources/WebInspectorKit/WebInspector/Views/DOMTreeView/DOMTreeView.html
+++ b/Sources/WebInspectorKit/WebInspector/Views/DOMTreeView/DOMTreeView.html
@@ -17,6 +17,6 @@
             </div>
         </section>
     </div>
-    <script src="DOMTreeView.js"></script>
+    <script type="module" src="DOMTreeView.js"></script>
 </body>
 </html>
