fix: domtreeview script bundle

--- a/Sources/WebInspectorKit/WebInspector/Views/DOMTreeView/dom-tree-view.html
+++ b/Sources/WebInspectorKit/WebInspector/Views/DOMTreeView/dom-tree-view.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Inspector</title>
-    <link rel="stylesheet" href="DOMTreeView.css">
+    <link rel="stylesheet" href="dom-tree-view.css">
 </head>
 <body>
     <div class="inspector">
